[tool.poetry]
name = "youtube-downloader"
version = "0.1.0"
description = ""
authors = ["Pedro <pedrofbr@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.37.1"
yt-dlp = "^2024.8.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
